<resources>
    <string name="app_name">World Cup 2022</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="r1">Group</string>
    <string name="r1.1">1st Place</string>
    <string name="r1.2">2nd Place</string>

    <string name="r2">A</string>
    <string name="r2.1">Netherlands</string>
    <string name="r2.2">Senegal</string>

    <string name="r3">B</string>
    <string name="r3.1">England</string>
    <string name="r3.2">USA</string>

    <string name="r4">C</string>
    <string name="r4.1">Argentina</string>
    <string name="r4.2">Poland</string>

    <string name="r5">D</string>
    <string name="r5.1">France</string>
    <string name="r5.2">Australia</string>

    <string name="r6">E</string>
    <string name="r6.1">Japan</string>
    <string name="r6.2">Spain</string>

    <string name="r7">F</string>
    <string name="r7.1">Morocco</string>
    <string name="r7.2">Croatia</string>

    <string name="r8">G</string>
    <string name="r8.1">Brazil</string>
    <string name="r8.2">Switzerland</string>

    <string name="r9">H</string>
    <string name="r9.1">Portugal</string>
    <string name="r9.2">South Korea</string>

    <string name="ali">Hello</string>
</resources>