<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/r1"
            android:padding="3dip"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginBottom="25sp"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r1.1"
            android:padding="3dip"
            android:layout_marginBottom="25sp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r1.2"
            android:padding="3dip"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginBottom="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/r2"
            android:textColor="@color/black"
            android:padding="3dip"
            android:textSize="25sp"
            android:layout_marginBottom="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r2.1"
            android:padding="3dip"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="25sp"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r2.2"
            android:padding="3dip"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="25sp"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/r3"
            android:padding="3dip"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="25sp"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r3.1"
            android:padding="3dip"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="25sp"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r3.2"
            android:padding="3dip"
            android:layout_marginBottom="25sp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/r4"
            android:padding="3dip"
            android:layout_marginBottom="25sp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r4.1"
            android:padding="3dip"
            android:layout_marginBottom="25sp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r4.2"
            android:padding="3dip"
            android:textColor="@color/black"
            android:layout_marginBottom="25sp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/r5"
            android:layout_marginBottom="25sp"
            android:textColor="@color/black"
            android:padding="3dip"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r5.1"
            android:padding="3dip"
            android:layout_marginBottom="25sp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r5.2"
            android:padding="3dip"
            android:layout_marginBottom="25sp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/r6"
            android:textColor="@color/black"
            android:padding="3dip"
            android:textSize="25sp"
            android:layout_marginBottom="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r6.1"
            android:padding="3dip"
            android:layout_marginBottom="25sp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r6.2"
            android:layout_marginBottom="25sp"
            android:padding="3dip"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_marginBottom="25sp"
            android:text="@string/r7"
            android:padding="3dip"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r7.1"
            android:padding="3dip"
            android:layout_marginBottom="25sp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r7.2"
            android:padding="3dip"
            android:layout_marginBottom="25sp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/r8"
            android:layout_marginBottom="25sp"
            android:padding="3dip"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r8.1"
            android:padding="3dip"
            android:textSize="25sp"
            android:layout_marginBottom="25sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r8.2"
            android:textColor="@color/black"
            android:layout_marginBottom="25sp"
            android:padding="3dip"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/r9"
            android:padding="3dip"
            android:layout_marginBottom="25sp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r9.1"
            android:layout_marginBottom="25sp"
            android:padding="3dip"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/r9.2"
            android:layout_marginBottom="25sp"
            android:padding="3dip"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </TableRow>
</TableLayout>